--- a/src/partials/card.html
+++ b/src/partials/card.html
@@ -75,7 +75,9 @@
         </div>
       </div>
       <div class="card-actions">
-        <button type="button" class="btn btn-sm btn-teal-400">
+        <button type="button" class="btn btn-sm btn-teal-400"
+          data-bs-toggle="modal"
+          data-bs-target="#modal-order">
           Заказать
         </button>
         <a href="./product.html" class="btn btn-sm btn-outline-primary">
