--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,7 +8,9 @@
         </div>
 
         <div>
-          <button type="button" class="btn footer-contacts-callback">
+          <button type="button" class="btn footer-contacts-callback"
+            data-bs-toggle="modal"
+            data-bs-target="#modal-order">
             <span>Заказать обратный звонок</span>
             <span class="icon">
               <svg>
