--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -31,6 +31,7 @@
 @import "./bootstrap/list-group";
 @import "./bootstrap/close";
 @import "./bootstrap/offcanvas";
+@import "./bootstrap/modal";
 
 @import "../../node_modules/bootstrap/scss/helpers";
 
