--- a/src/partials/card.html
+++ b/src/partials/card.html
@@ -1,13 +1,15 @@
 @if (type === "default") {
   <div class="card">
-    <div class="card-tags">
-      <div class="badge badge--instock">
-        В наличии
+    @if (tags === true) {
+      <div class="card-tags">
+        <div class="badge badge--instock">
+          В наличии
+        </div>
+        <div class="badge badge--popular">
+          Популярные
+        </div>
       </div>
-      <div class="badge badge--popular">
-        Популярные
-      </div>
-    </div>
+    }
     <div class="card-picture">
       <picture>
         <source srcset="./img/card/image-1.webp" type="image/webp">
@@ -19,14 +21,16 @@
         <h5 class="card-title">
           Whatsminer M60S+, 186TH/s
         </h5>
-        <div class="card-tags">
-          <div class="badge badge--instock">
-            В наличии
+        @if (tags === true) {
+          <div class="card-tags">
+            <div class="badge badge--instock">
+              В наличии
+            </div>
+            <div class="badge badge--popular">
+              Популярные
+            </div>
           </div>
-          <div class="badge badge--popular">
-            Популярные
-          </div>
-        </div>
+        }
         <ul class="card-list">
           <li>
             <dl>
