--- a/src/scss/bootstrap/_buttons.scss
+++ b/src/scss/bootstrap/_buttons.scss
@@ -457,8 +457,8 @@
   --#{$prefix}btn-active-color: var(--#{$prefix}white);
 
   --#{$prefix}btn-bg: linear-gradient(90deg, var(--#{$prefix}teal) 0%, var(--#{$prefix}teal) 50%, var(--#{$prefix}teal-400) 100%);
-  --#{$prefix}btn-hover-bg: linear-gradient(90deg, var(--#{$prefix}teal) 0%, var(--#{$prefix}teal) 10%, var(--#{$prefix}teal-400) 100%);
-  --#{$prefix}btn-active-bg: linear-gradient(90deg, var(--#{$prefix}teal) 0%, var(--#{$prefix}teal) 10%, var(--#{$prefix}teal-400) 100%);
+  --#{$prefix}btn-hover-bg: linear-gradient(90deg, var(--#{$prefix}teal) 0%, var(--#{$prefix}teal) 50%, var(--#{$prefix}teal-400) 100%);
+  --#{$prefix}btn-active-bg: linear-gradient(90deg, var(--#{$prefix}teal) 0%, var(--#{$prefix}teal) 50%, var(--#{$prefix}teal-400) 100%);
 
   --#{$prefix}btn-border-color: linear-gradient(90deg, #ADADAD 0%, var(--#{$prefix}white) 50%, #ADADAD 100%);
   --#{$prefix}btn-hover-border-color: linear-gradient(90deg, #ADADAD 0%, var(--#{$prefix}white) 50%, #ADADAD 100%);
@@ -469,7 +469,27 @@
   justify-content: center;
   gap: .5rem;
   white-space: nowrap;
-  box-shadow: inset 0 0 .875rem 0 rgba(var(--#{$prefix}white-rgb), .70), 0 .25rem 2rem 0 rgba(var(--#{$prefix}teal-rgb), .50)
+
+  @media (hover: hover) {
+    --#{$prefix}btn-bg: transparent;
+
+    --#{$prefix}btn-border-color: var(--#{$prefix}white);
+
+    &:is(:hover, :focus-visible) {
+      box-shadow: inset 0 0 .875rem 0 rgba(var(--#{$prefix}white-rgb), .70), 0 .25rem 2rem 0 rgba(var(--#{$prefix}teal-rgb), .50);
+
+      .icon {
+        transform: rotate(0deg);
+      }
+    }
+
+    .icon {
+      transform: rotate(15deg);
+      transition-property: transform;
+      transition-duration: 300ms;
+      transition-timing-function: ease-in-out;
+    }
+  }
 }
 
 .btn-more {
