--- a/src/partials/sections/telegram.html
+++ b/src/partials/sections/telegram.html
@@ -29,8 +29,8 @@
           type="image/png"
           media="(max-width: 767.98px)"
         />
-        <source srcset="./img/bg/banner-tg-2.webp" type="image/webp">
-        <img loading="lazy" src="./img/bg/banner-tg-2.png" class="img-fluid" width="344" height="189" alt="Картинка">
+        <source srcset="./img/telegram/image-2.webp" type="image/webp">
+        <img loading="lazy" src="./img/telegram/image-2.png" class="img-fluid" width="344" height="189" alt="Картинка">
       </picture>
     </div>
   </div>
